# ShapeMixer

./: CMakeLists.txt  LICENSE  README.md
include/: Constants.hpp  GLCanvas.hpp  MainWindow.hpp  Shape.hpp
src/: GLCanvas.cpp  MainWindow.cpp  main.cpp
